--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-tu bedzie koddd
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<TITLE>QubCloud</TITLE>
+</HEAD>
+
+<BODY BGCOLOR=#9FF999>
+<p>tubedzietext</p>
+</BODY>
+</HTML>
